--- a/frontend/src/pages/Post.css
+++ b/frontend/src/pages/Post.css
@@ -3,16 +3,22 @@
   justify-content: center;
   align-items: flex-start; /* Align items at the top */
   padding: 20px;
+  overflow-y : auto; 
+  
 }
 
 .sidebar {
   flex: 1; /* Take up 1/3 of the available space */
   margin-right: 20px;
+
 }
 
 .main-content {
   flex: 2; /* Take up 2/3 of the available space */
   color: #FAC01A; /* Set text color to yellow */
+  overflow-y : auto; 
+  width: fit-content;
+  block-size: fit-content;
 }
 
 h1 {
@@ -26,7 +32,7 @@ h1 {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin-bottom: 20px;
-
+  
 }
 
 .post-details h2 {
